--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -13,15 +13,65 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="fill"
-        android:layout_columnWeight="1"/><Button
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="fill"
-        android:layout_columnWeight="1"/><Button
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="fill"
-        android:layout_columnWeight="1"/>
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="fill"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="fill"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="fill"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="fill"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="fill"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="fill"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="fill"
+        android:layout_columnWeight="1"
+        android:layout_rowWeight="1" />
+
+
+
 
 
 </GridLayout>
