--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -72,7 +72,9 @@
         android:layout_width="wrap_content"
         android:layout_gravity="fill"
         android:layout_columnWeight="1"
-        android:layout_rowWeight="1" />
+        android:layout_rowWeight="1"
+        android:text="Dank Memes"
+        android:id="@+id/btnMemes"/>
 
 
 
