--- a/app/src/main/res/layout/activity_mensagem.xml
+++ b/app/src/main/res/layout/activity_mensagem.xml
@@ -6,17 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.example.a1401587_0.t1.MensagemActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true" />
-
     <EditText
-
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button"
-        android:layout_alignBottom="@+id/button"
-        android:layout_toStartOf="@+id/button" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="12dp"
+        />
+
+
+
+
+
 </RelativeLayout>
