Activity de alarme criada, mas com erro

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,6 +24,8 @@
         android:layout_gravity="fill"
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
+        android:text="Alarme"
+        android:id="@+id/btnAlarme"
         />
     <Button
         android:layout_height="wrap_content"
