--- a/app/src/main/res/layout/activity_mensagem.xml
+++ b/app/src/main/res/layout/activity_mensagem.xml
@@ -13,10 +13,22 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="14dp"
         android:layout_marginTop="12dp"
+        android:id="@+id/etContato"
         />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnContato"
+        android:layout_toRightOf="@id/etContato"/>
 
-
+    <EditText
+        android:id="@+id/etMsg"
+        style="@android:style/Widget.EditText"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/etContato"
+        android:textAppearance="@android:style/TextAppearance" />
 
 
 </RelativeLayout>
