--- a/app/src/main/res/layout/activity_mensagem.xml
+++ b/app/src/main/res/layout/activity_mensagem.xml
@@ -1,34 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.a1401587_0.t1.MensagemActivity">
+    tools:context="com.example.a1401587_0.t1.MensagemActivity"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:layout_marginTop="12dp"
+            android:hint="Escolha um contato"
+            android:id="@+id/etContato"
 
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="12dp"
-        android:id="@+id/etContato"
         />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnContato"
+        />
+    </LinearLayout>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="fill_vertical"
+        android:hint="Digite sua mensagem aqui..."
+        android:id="@+id/etMsg"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnContato"
-        android:layout_toRightOf="@id/etContato"/>
-
-    <EditText
-        android:id="@+id/etMsg"
-        style="@android:style/Widget.EditText"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/etContato"
-        android:textAppearance="@android:style/TextAppearance" />
-
-
-</RelativeLayout>
+        android:text="Enviar SMS"
+        android:id="@+id/btnEnviar"/>
+</LinearLayout>
