--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -58,6 +58,8 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_weight="1"
+            android:text="Mapa"
+            android:id="@+id/btnMapa"
             />
         <Button
             android:layout_height="wrap_content"
