--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -40,7 +40,9 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_weight="1"
-             />
+            android:text="Captura Goleta"
+            android:id="@+id/btnGoleta"
+            />
     </LinearLayout>
     <LinearLayout
         android:layout_width="0dp"
