funcao emergencia implementada

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -30,6 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_weight="1"
+            android:id="@+id/btnFaustao"
+            android:text="Emergência"
             />
         <Button
             android:layout_height="wrap_content"
